responsive gap fixeas

--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -64,6 +64,9 @@ input, textarea {
 
 /*MEDIA QUERIE (SML. DEVICES)*/
 @media screen  and (max-width: 600px) {
+    #contact {
+        margin-top: 130rem;
+    }
     .container.contact__container {
         grid-template-columns: 1fr;
         width: var(--container-width-sm);
