--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -65,7 +65,7 @@
 /*SML DEVICES*/
 @media screen and (max-width: 600px) {
     #expirence {
-        margin-top: 25rem;
+        margin-top: 40rem;
     }
     
     .experience__container {
