--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -42,6 +42,10 @@
 
 /* MEDIA QUERIES  (SML. DEVICES) */
 @media screen and (max-width: 600px) {
+    #portfolio {
+        margin-top: 50rem;
+    }
+    
     .portfolio__container {
         grid-template-columns: 1fr;
         gap: 1rem;
